--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -122,10 +122,18 @@ h1 {
   border-radius: 10px;
 }
 
-.textarea{
+textarea{
   width:100% !important;
 }
 
 section{
   margin-top: 50px;
+}
+
+.full-width{
+  width:100% !important;
+}
+
+.form-padding{
+  padding: 10px 0px;
 }
