--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -99,17 +99,21 @@ h1 {
 }
 
 .feelLikeIcon{
-  padding: 20px;
-  margin: 10px;
+  padding: 10px;
 }
 
+.feelLiceIcon-container{
+  display: flex;
+  justify-content: center;
+}
 .feelLikeIcon-icon{
   width: 50px;
 }
 
 .feelLikeIcon-active{
-  border: black 1px solid;
-  border-radius: 10px;
+  box-shadow: inset 0 0 19px 15px $bg-light;
+  background-color: $bg-dark;
+  border-radius: 20px;
 }
 
 .emotionIcon{
