--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -3,6 +3,7 @@ $bg-light: #fff;
 $bg-dark: #007ac9;
 $btn-red: #ec4371;
 $bg-card: #eee8;
+$bg-darkgrey: #4a5568;
 
 
 h1 {
@@ -138,6 +139,7 @@ h1 {
 
 textarea{
   width:100% !important;
+  margin: 10px;
 }
 
 section{
@@ -150,4 +152,33 @@ section{
 
 .form-padding{
   padding: 10px 0px;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.margin{
+  margin: 10px;
+}
+
+.wall-input{
+  margin: 10px;
+  width: 60%;
+}
+
+.background_darkgrey{
+  background-color: $bg-darkgrey !important;
+}
+
+.wall_input_section{
+  margin: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
 }
