--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -137,8 +137,14 @@ h1 {
   border-radius: 10px;
 }
 
+.newpost-section{
+  padding: 10px 0px;
+  text-align: center;
+  margin: 10px;
+}
+
 textarea{
-  width:100% !important;
+  width:80% !important;
   margin: 10px;
 }
 
