--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -99,6 +99,11 @@ h1 {
   border-radius: 20px !important;
 }
 
+.button--login{
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+}
+
 .card--post{
   width: 100%;
   background-color: $bg-card !important;
