--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -99,6 +99,12 @@ h1 {
   border-radius: 20px !important;
 }
 
+.button--icon{
+  background-color: $bg-dark !important;
+  border-radius: 23px !important;
+  padding: 0px 12px !important;
+}
+
 .button--login{
   margin-top: 20px !important;
   margin-bottom: 20px !important;
@@ -223,4 +229,31 @@ section{
   font-size: 10px;
   text-align: right;
   margin-bottom: -10px;
+}
+
+.post-date{
+  margin: 0px;
+  font-size: 12px;
+  text-align: right;
+  margin-top: -10px;
+}
+
+.post-comment{
+  text-align: justify;
+  font-size: 14px;
+  text-indent: 20px;
+}
+
+.switch__toggle{
+  background-color: $bg-dark !important;
+}
+
+.sharedText{
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.recorTitle{
+  font-size: 12px;
+  margin: 0px;
 }
