archived and rating for homeworks

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -300,3 +300,8 @@ section{
   position: fixed !important;
   bottom: 20px !important;
 }
+
+.notification{
+  padding: 1px 5px !important;
+  background-color: $bg-dark !important;
+}
